--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
     -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133652354-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133652354-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-133652354-1');
-    </script>
+    </script> -->
 
     <title>Politicando</title>
   </head>
